[Extensions WebUI] Remove the "Open in Dev Tools" button on errors

Extension errors have associated renderers, and we half-supported
opening developer tools to that error. Unfortunately, we didn't do this
very well - we didn't watch for renderer destruction or navigation,
either of which invalidate the ability to inspect.

Given the complexity of properly monitoring these, and the limited
utility this feature offered, remove this aspect of the error console.
The stack trace, context, and error should be sufficient to help the
developer track it down.

Bug: 769978
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ie0ae3d07448dc82af97315189313a9fd969b5b14
Reviewed-on: https://chromium-review.googlesource.com/1069564
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560941}
Former-commit-id: 1aa78e0111c32de48ed588a71f7faa4cb83d043f