chrome/browser/resources/md_extensions/service.js
@@ -310,11 +310,6 @@ cr.define('extensions', function() {
     }
 
     /** @override */
-    openDevTools(args) {
-      chrome.developerPrivate.openDevTools(args);
-    }
-
-    /** @override */
     showInFolder(id) {
       chrome.developerPrivate.showPath(id);
     }
